[tool.poetry]
name = "CryptoPro-pycades"
version = "0.1.1"
description = "An application that allows you to sign files through CryptoPro"
authors = ["MarionetkaX <sergey07061999@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
