[tool.poetry]
name = "http"
version = "0.1.0"
description = ""
authors = ["MarionetkaX <sergey07061999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
python-multipart = "^0.0.5"
requests = "^2.27.1"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_release = true
build_command = "pip install poetry && poetry build"
