[tool.poetry]
name = "http"
version = "0.1.0"
description = ""
authors = ["MarionetkaX <sergey07061999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.5"
python-multipart = "^0.0.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
